--- a/app/src/main/res/drawable/splash_image.xml
+++ b/app/src/main/res/drawable/splash_image.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:drawable="@color/black" />
-    <item android:drawable="@drawable/ic_google" />
+    <item android:drawable="@color/white" />
+    <item android:drawable="@drawable/ic_monelytics_splashscreen" />
 </layer-list>
