--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -16,7 +16,7 @@
 
     <style name="splashScreenTheme" parent="Theme.MaterialComponents.Light.NoActionBar" >
         <item name="android:windowBackground">@drawable/splash_image</item>
-        <item name="android:statusBarColor">@color/black</item>
+        <item name="android:statusBarColor">@color/white</item>
     </style>
 
     <style name="Theme.MoneyManager.NoActionBar">
